fix bug in mobile phone view where the spacing for the header bar was off.

--- a/src/scss/components/_header-bar-template.scss
+++ b/src/scss/components/_header-bar-template.scss
@@ -14,7 +14,7 @@
   &-title {
     margin: 0 0 0.5em $pad-left-title;
     @include respond(tab-port) {
-      margin: 1.4em 0 0.35åem 0;
+      margin: 1.4em 0 0.35em 0;
     }
     h1 {
       font-size: 1.7em;
